# nauyaca

./: .gitignore  Documentation.ipynb  Installation  Pipfile  README.md  __init__.py  constants.py  mcmc.py  operatettvs.py  optimizers.py  planetarysystem.py  plots.py  plots_class.py  pyproject.toml  run_example.py  setplanet.py  utils.py
.ipynb_checkpoints/: Documentation-checkpoint.ipynb
Documentation/: .best  1- Introduction.ipynb  1-Introduction.ipynb  1.- Introduction.html  1.- Introduction.ipynb  2- Running Optimizers.ipynb  2- Setup.ipynb  2.- Setup.html  2.- Setup.ipynb  3- Running Optimizers.html  3- Running Optimizers.ipynb  3- Running the MCMC.ipynb  4- Running the MCMC.html  4- Running the MCMC.ipynb  5.- Advanced settings.ipynb  SystemX.best  SystemX.json  SystemX.pkl  SystemX_cube.opt  SystemX_phys.opt
Documentation/.ipynb_checkpoints/: 1-Introduction-checkpoint.ipynb  1.- Introduction-checkpoint.ipynb  2- Running Optimizers-checkpoint.ipynb  2.- Setup-checkpoint.ipynb  3- Running Optimizers-checkpoint.ipynb  3- Running the MCMC-checkpoint.ipynb  4- Running the MCMC-checkpoint.ipynb  5.- Advanced settings-checkpoint.ipynb  (+1 more)
Examples/: Initial_walkers.ipynb  README  README.md  custom_fit.py  customized_figures.ipynb  customized_fit.ipynb  ejemplos_temp.ipynb  individual_solutions.py  initial_walkers.py  miscellany.ipynb  quick_fit.py  restarting_mcmc.ipynb  restarting_mcmc.py
example/: true_syn_2
nauyaca/: __init__.py  constants.py  mcmc.py  optimizers.py  planetarysystem.py  plots.py  plots_class.py  setplanet.py  utils.py
synthetic/: true_syn
(+14 files in other folders)
